--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true
     },
-    "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx", "src/app/head.jsx", "src/app/layout.js"],
     "exclude": ["node_modules"]
 }
