--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@formspree/react": "^2.5.1",
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@reduxjs/toolkit": "^1.9.7",
         "@types/node": "20.8.9",
         "@types/react": "18.0.28",
@@ -16,20 +20,17 @@
         "eslint": "8.34.0",
         "eslint-config-next": "13.1.6",
         "json5": "^2.2.3",
+        "nanoid": "^5.0.2",
         "next": "14.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.11.0",
         "react-redux": "^8.0.5",
-        "@formspree/react": "^2.5.1",
-        "@fortawesome/fontawesome-svg-core": "^6.4.2",
-        "@fortawesome/free-solid-svg-icons": "^6.4.2",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "nanoid": "^5.0.2",
+        "react-router-dom": "^6.17.0",
+        "react-tsparticles": "^2.12.2",
         "shortid": "^2.2.16",
         "styled-components": "^6.1.0",
-        "react-tsparticles": "^2.12.2",
         "tsparticles": "^2.12.0",
-        "react-router-dom": "^6.17.0",
         "typescript": "^5.2.2"
     },
     "devDependencies": {
